# physics-educational-experiment

./: CMakeLists.txt  Vectors.cpp  Vectors.h  main.cpp  requirements.sh
PeeTest/: PeeTest.cpp  PeeTest.h  Result.cpp  Result.h  Test.h  TestCase.cpp  TestCase.h
tests/: ITest.h  PeeTest.cpp  PeeTest.h  Test.h
vectors/: Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
vectors/tests/: Vector2Test.cpp  Vector2Test.h  Vector3Test.cpp  Vector3Test.h
